[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs-feature-engineering"
version = "0.1.0"
description = "RCS feature engineering module (rct_forecast.feature_engineering)"
requires-python = ">=3.10"
dependencies = ["pandas>=1.5", "numpy>=1.24", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
